--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,4 @@
 *.iml
-.idea/inspectionProfiles/profiles_settings.xml
-*.xml
-.idea/inspectionProfiles/profiles_settings.xml
-*.xml
-.idea/.name
-*.xml
-.idea/inspectionProfiles/Project_Default.xml
-*.xml
+.idea/
 *.pyc
-data/*.csv
-!data/merchants.csv
-*.xml
-*.pyc
-*.pyc
-demographics.pyc
-*.pyc
-demographics.pyc
-*.pyc
-Notebooks
+venv/
